java版本改为1.8,移除openJFX 11